--- a/src/Components/Admin-Section/AdminLogin.css
+++ b/src/Components/Admin-Section/AdminLogin.css
@@ -49,8 +49,9 @@ body {
 }
 
 .teampluss-logo {
-
   height: 40% !important;
+  margin-right:190px;
+  margin-bottom:0px !important;
 }
 
 .stafio-logo {
@@ -151,8 +152,12 @@ body {
 }
 
 .signup-text {
-  
+  text-align:center;
   font-size: 15px;
+  font-weight:500;
+}
+.signup-page{
+  font-weight:600;
 }
 
 .text-center a {
@@ -169,7 +174,7 @@ body {
 .remember-me-checkbox label {
   font-size: 14px;
   cursor: pointer;
-  margin-bottom:-2px;
+  margin-bottom:-2px ;
   padding-left:5px;
 
 }
@@ -182,4 +187,32 @@ body {
 
 .forgot-password-link:hover {
   text-decoration: underline;
+}
+
+
+.google-login-custom {
+  width: 100%;
+  max-width: 400px;
+  margin-top:20px;
+  text-align: center;
+  border-radius: 15px !important;
+  font-size: 18px;
+  font-weight: 600;
+  color: #19bde8; /* Blue text */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border: 1px solid #e0e8ff;
+  transition: 0.2s ease;
+}
+
+.google-login-custom:hover {
+  background: #e9f2ff;
+}
+
+.google-icon {
+  width: 22px;
+  height: 22px;
 }
