--- a/src/Components/Employee-Section/Profile/ProfileBanner.css
+++ b/src/Components/Employee-Section/Profile/ProfileBanner.css
@@ -22,22 +22,25 @@
 .profile-banner-wrapper {
   display: flex;
   justify-content: center;
-  padding: 60px 0;
+  padding: 60px 0 ;
   font-family: 'Montserrat', sans-serif;    /* new font family*/
   background: #f5f7fa;
   /* new */
    position: relative; 
-  width: 100%;
+  width: 97%;
   margin: 0 auto;
+  margin-left: -5px;
+  
+  
 }
 
 /* ===== Main Container ===== */
 .profile-banner-container {
   width: 1088px;
   border-radius: 10px;
-  background: #fff;
+  /* background: #fff; */
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
-  
+   /* box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25); */
   overflow: visible; /* allow profile image to overflow */
    
 }
@@ -49,7 +52,12 @@
   background: linear-gradient(91.49deg, #19bde8 61.8%, #0e6a82 100.29%);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25), 
+              0px 4px 8px rgba(0, 0, 0, 0.15);
+     z-index: 50;  
+   /* box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08); */
   overflow: visible; /* allow image to overflow */
 }
 
@@ -62,11 +70,11 @@
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  /* background: #fff;    new
-  padding: 1px; */
+   /* background: #fff;     */
+  padding: 0.2px; 
   box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25);
   z-index: 50; 
-  /*new*/  background: linear-gradient(to top, rgba(0, 102, 255, 0) 0%, #0066ff 70%, #0066ff 100%);
+  /* new */   
 }
 
 .profile-image {
@@ -76,8 +84,10 @@
   object-fit: cover;
   background: #19BDE8 ;     /*  new  background: #000000ff; */
   /* new */ 
-  mask-image: linear-gradient(to bottom, #19BDE8, transparent 100%); 
-  -webkit-mask-image: linear-gradient(to bottom, #19BDE8 85%, transparent 100%);
+  padding: 0.2px; 
+   mask-image: linear-gradient(to bottom,#19bde8 96%,  transparent 70%); 
+  -webkit-mask-image: linear-gradient(to bottom,#19bde8 92%, transparent 100%); 
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 /* ===== Arrow Illustration ===== */
@@ -107,13 +117,17 @@
 
 /* ===== White Info Card ===== */
 .profile-info-card {
-  background: #fff;
-  padding: 40px 40px 40px 40px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  background: #F6FDFB;      /* new*/ /* background: #fff; */ 
+  padding: 5px 30px 40px 43px;
+  bottom: -10px;
+  /* border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
   position: relative;
-  z-index: 1; /* below profile image */
+  z-index: 0; /*below profile image*/
   overflow: visible;
+   /* box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25); */
+   height: 120px;
+   border-radius: 0px;
 }
 
 /* ===== Grid Layout ===== */
@@ -124,19 +138,24 @@
   color: #000000ff;
   font-size: 0.95rem;
   line-height: 1.7;
+  
+  
 }
 
 /* ===== Left Section ===== */
 .profile-left {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 2px;
+  margin-left: -20px;
+  margin-top: 20px;
 }
 
 .profile-name-line {
   display: flex;
   align-items: baseline;
   gap: 4px;
+  
 }
 
 .profile-name {
@@ -163,7 +182,11 @@
 /* ===== Center Section ===== */
 .profile-center div {
   color: #444;
-  font-size: 0.9rem;        /* new */
+  font-size: 0.9rem;      /* new */
+}
+
+.profile-center {
+  margin-top: 20px;
 }
 
 /* ===== Right Section ===== */
@@ -171,5 +194,6 @@
   text-align: left;       /* new  text-align: right;*/
   color: #444;
   font-size: 0.9rem;        /* new */
-  padding-left: 90px;
+  padding-left: 70px;
+  margin-top: 20px;
 }
