--- a/src/Components/Admin-Section/Topbar.css
+++ b/src/Components/Admin-Section/Topbar.css
@@ -39,6 +39,106 @@
     margin-right:50px;
 }
 
+/* NEW CSS part */
+/* Admin profile popup  */
+
+.profile0{
+    margin-right:25px;
+    /* gap:10px; */
+}
+
+.profile-data1{
+  gap:5px;
+}
+
+.full-profile-popup1 {
+  position: absolute;
+  top: 70px;
+  right: 45px;
+  width: 900px;
+  max-height: 90vh;
+  overflow-y: auto;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+  padding: 20px;
+  z-index: 1000;
+  animation: fadeIn 0.2s ease-in-out;
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.popup-content {
+  padding: 10px 15px;
+  background: #ffffffff ;
+}
+
+.profile-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.profile-photo {
+  text-align: center;
+  
+}
+
+.profile-photo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.details-grid {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
+
+}
+
+.details-grid div {
+  flex: 1;
+  min-width: 250px;
+  background: #ffffffff;
+  padding: 10px 15px;
+  border-radius: 10px;
+  text-align:left;
+}
+
+.details-grid p {
+  color: #000;          /* Makes it darker (pure black) */
+  font-weight: 700;     /* Ensures boldness */
+}
+
+
+.details-grid h6 {
+  color: #47a0dbff;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.btn-close {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-5px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+
 
 /* AnnouncementPopup.css */
 
