--- a/src/Components/Employee-Section/Profile/ProfileBanner.css
+++ b/src/Components/Employee-Section/Profile/ProfileBanner.css
@@ -1,4 +1,4 @@
-/* ===== General Wrapper ===== */
+
 .my-profile-title {            /* new css*/
   font-size: 1.0rem;
   font-weight: 600;
@@ -8,9 +8,9 @@
   /* new */
   position: absolute; /* Takes the title out of normal flow */
   top: 0px;           /* Aligns to the top edge of the wrapper */
-  left: -20px;          /* Aligns to the left edge of the wrapper */
+  left: 0px;          /* Aligns to the left edge of the wrapper */
   padding: 20px 40px; /* Adds space around the text, matching the image alignment */
-  z-index: 100; 
+  z-index: 1; 
 }
 .my-profile-title h1 {     /* new css*/
   font-size: 28px ;
@@ -19,6 +19,9 @@
   font-weight: 600;
    
 }
+
+/* ===== General Wrapper ===== */
+
 .profile-banner-wrapper {
   display: flex;
   justify-content: center;
@@ -38,11 +41,11 @@
 .profile-banner-container {
   width: 1088px;
   border-radius: 10px;
-  /* background: #fff; */
+  background: #fff;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
    /* box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25); */
   overflow: visible; /* allow profile image to overflow */
-   
+  position: relative; 
 }
 
 /* ===== Top Gradient Banner ===== */
@@ -56,7 +59,7 @@
   border-bottom-right-radius: 10px;
   box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25), 
               0px 4px 8px rgba(0, 0, 0, 0.15);
-     z-index: 50;  
+     z-index: 1;  
    /* box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08); */
   overflow: visible; /* allow image to overflow */
 }
@@ -65,15 +68,15 @@
 .profile-image-wrapper {
   position: absolute;
   left: 24px;          /* left side */     /*updated*/
-  top: 80%;            /* start vertical center */
-  transform: translateY(-55%); /* vertical centering between top and bottom */
+  top: 73%;            /* start vertical center */
+  transform: translateY(-50%); /* vertical centering between top and bottom */
   width: 110px;
   height: 110px;
   border-radius: 50%;
-   /* background: #fff;     */
+   background: #fff;    
   padding: 0.2px; 
   box-shadow: 0px 6px 16px rgba(28, 27, 27, 0.25);
-  z-index: 50; 
+  z-index: 2; 
   /* new */   
 }
 
@@ -86,8 +89,9 @@
   /* new */ 
   padding: 0.2px; 
    mask-image: linear-gradient(to bottom,#19bde8 96%,  transparent 70%); 
-  -webkit-mask-image: linear-gradient(to bottom,#19bde8 92%, transparent 100%); 
+  -webkit-mask-image: linear-gradient(to bottom,#19bde8 89%, transparent 100%); 
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+  
 }
 
 /* ===== Arrow Illustration ===== */
