--- a/src/Components/Employee-Section/Topbar.css
+++ b/src/Components/Employee-Section/Topbar.css
@@ -1,7 +1,7 @@
-*{
+/* *{
   box-sizing: border-box;
   
-}
+} */
 .topbar {
   /* margin-top: 50px; */   /* modified */
   height: 70px;
@@ -20,7 +20,7 @@
 
 .topbar-searches{          /* new*/
     /* width: 400px;  */
-     width: 100px;
+     /* width: 100px; */
   padding: 5px 10px;
   padding-right:10px;
   font-size: 13px;
@@ -29,9 +29,13 @@
 .topbar-searches input{     /* new*/
     border: none;
     background-color: beige;
-    width: 100px;
+    /* width: 100px; */
     height: 100%;
     outline: none;
+}
+
+.form-controler{
+  width: 50% !important;
 }
 
 .topbar-avatar {
