--- a/src/Components/Admin-Section/settings-/admin-settings.css
+++ b/src/Components/Admin-Section/settings-/admin-settings.css
@@ -4,11 +4,12 @@
   background: #eff5ff;
   min-height: 100vh;
   font-family: "Montserrat", sans-serif;
+  width: 100%;
 }
 
 /* Header */
 .settings-header h1 {
-  font-size: 32px !important;  /*modified*/
+/*   font-size: 32px !important; modified */
   font-weight: 700;
   color: #1f2937;
   margin-bottom: 5px;
@@ -65,8 +66,10 @@
   padding: 30px 40px;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
-  width: 95%;
+  width: 90%;
+  max-width: 90%;
   margin-left: 20px;
+  
 }
 
 .settings-card h3 {
@@ -86,37 +89,122 @@
 
 .form-column {
   flex: 1;
-  min-width: 320px;
+  max-width: 380px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  
+  
+
 }
 
 .form-group label {
   font-weight: 500;
+  /* font-size: 10px !important; */
   margin-bottom: 8px;
   color: #374151;
 }
 
 .form-group input,
 .form-group select {
-  padding: 10px 12px;
-  border: 1px solid #d1d5db;
-  border-radius:12px !important;
+   padding: 9px 12px 10px 10px;    /*padding: 10px 12px;*/
+  /* border: 1px solid #d1d5db; */
+  border-radius:4px !important ;/*modified*/
   font-size: 14px;
   outline: none;
-  background: #f9fafb !important ;
-  width: 85% !important;
+  background: #f9fafb ;
+   /* new */
+   height: 80px;
+  width: 100%  ;
+  max-width: 600px;
+  appearance: auto;
+  -webkit-appearance: auto;
+  -moz-appearance: auto;
+  
 }
+
 
 .form-group input:focus,
 .form-group select:focus {
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+ 
+
+.form-group1{            /*new*/
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
+  margin-top: -10px;
+  
+}
+
+.form-group1 input{     /*new*/
+  padding: 9px 12px 10px 10px;
+  width: 315px ;
+  height: 40px;
+  border-color: #d6cfcf;
+  border-style:solid;
+  border-radius:4px !important ;/*modified*/
+  font-size: 15px;
+  outline:none;
+  background: #f9fafb ;
+}
+
+.form-group1 input:focus{    /*new*/
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+
+.form-group2{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-group2 select{     /*new*/
+  padding: 9px 12px 10px 10px;
+  width: 315px ;
+  height: 40px;
+  border-color: #d6cfcf;
+  border-style:solid;
+  border-radius:4px !important ;/*modified*/
+  font-size: 15px;
+  outline:none;
+  background: #f9fafb ;
+}
+
+.form-group2 select:focus{    /*new*/
+  border-color: #19bde8;
+  box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+
+.form-group3{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-group3 select{     /*new*/
+  padding: 9px 12px 10px 10px;
+  width: 362px ;
+  height: 44px;
+  border-color: #d6cfcf;
+  border-style:solid;
+  border-radius:7px !important ;/*modified*/
+  font-size: 15px;
+  outline:none;
+  background: #f9fafb ;
+}
+
+.form-group3 select:focus{    /*new*/
   border-color: #19bde8;
   box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
 }
