--- a/src/Components/Admin-Section/settings-/admin-settings.css
+++ b/src/Components/Admin-Section/settings-/admin-settings.css
@@ -24,6 +24,94 @@
   margin-left: 20px;
 }
 
+/* DEFAULT LIGHT MODE (already existing styles) */
+.admin-light {
+  background-color: #f5f6fa;
+  color: #1a1a1a;
+}
+
+/* ===================== 
+   DARK MODE – ADMIN ONLY     new
+   ===================== */
+
+.admin-dark {
+  background-color: #0f172a;
+  color: #e5e7eb;
+}
+
+/* Cards */
+.admin-dark .settings-card {
+  background-color: #4d4e53;
+  border: 1px solid #334155;
+}
+
+/* Inputs */
+.admin-dark input,
+.admin-dark select {
+  background-color: #020617;
+  color: #e5e7eb;
+  border: 1px solid #334155;
+}
+
+/* Labels */
+.admin-dark label {
+  color: #cbd5f5;
+}
+
+.admin-dark select{
+  color: black;
+}
+
+/* Sidebar */
+.admin-dark .sidebar {
+  background-color: #020617;
+}
+
+/* Topbar */
+.admin-dark .topbar {
+  background-color: #4d4e53;
+  border-bottom: 1px solid #334155;
+}
+
+/* Tables */
+.admin-dark table {
+  background-color: #4d4e53;
+  color: #ffffff;
+}
+
+/* Buttons */
+.admin-dark .btn-save {
+  background-color: #2563eb;
+}
+
+.admin-dark .btn-cancel {
+  background-color: #334155;
+  color: #e5e7eb;
+}
+.admin-dark .form-group2 label{
+  color: black;
+}
+.admin-dark .form-group1 label{
+  color: black;
+}
+.admin-dark .form-group3 label{
+  color: black;
+}
+.admin-dark .team-table th,.admin-dark .department-table th{
+  /* color: black; */
+  background: #303033;
+}
+
+.admin-dark .break-item label{
+  color: black;
+}
+
+.admin-dark .break-times-content{
+  background: #4d4e53;
+  border-color:grey;
+  padding: 10px;
+}
+
 /* Tabs */
 .settings-tabs {
   display: flex;
@@ -229,6 +317,18 @@
 .form-group3 select:focus{    /*new*/
   border-color: #19bde8;
   box-shadow: 0 0 0 2px rgba(25, 189, 232, 0.2);
+}
+
+.theme-input-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 44px;
+  padding: 0 12px;
+  border: 1px solid #cbd5e1;
+  border-radius: 6px;
+  background-color:#f7f8f8;
+  width: 315px; /* adjust if needed */
 }
 
 /* Toggle Switch */
