--- a/src/Components/Employee-Section/Settings-/Settings.css
+++ b/src/Components/Employee-Section/Settings-/Settings.css
@@ -156,9 +156,7 @@
 .switch input {
   opacity: 0;
   width: 0;
-  height: 0;
-  /* new */
-  
+  height: 0;  
 }
 
 .slider {
@@ -232,7 +230,7 @@ input:checked + .slider:before {
 }
 
 [data-theme="dark"] {
-  --bg-color: #121212;
+  --bg-color: #c7c7c7; 
   --text-color: #ffffff;
 }
 
