--- a/src/Components/Admin-Section/Organization/AdminProfile.css
+++ b/src/Components/Admin-Section/Organization/AdminProfile.css
@@ -302,6 +302,20 @@
   padding: 7px 18px;
 }
 
+/* validation for personal info tab*/
+.input-error {
+  border: 1px solid #dc3545 !important;
+  background-color: #fff5f5;
+  margin-bottom: 0.2px;
+}
+
+.error-text {
+  color: #dc3545;
+  font-size: 12px;
+  /* margin-bottom: 2px; */
+  padding-top: 4px;
+}
+
 @media (max-width: 900px) {
   .update-info-header-box { margin: 0; }
   .personal-info-form { padding: 0 8px 4px 8px !important; }
@@ -382,8 +396,14 @@
 .pexform-input1{
    resize: vertical;
    height: 65px;
+   margin-bottom: 5px;   /*new*/  
+}
+
+.pexform-input2 {
+   resize: vertical;
+   height: 80px !important;
+   /* top: 10px; */
   
-   
 }
 
 /* ====================== BANK DETAILS TAB SECTION ====================== */
