--- a/src/Components/Admin-Section/AdminRegister.css
+++ b/src/Components/Admin-Section/AdminRegister.css
@@ -38,18 +38,18 @@ body {
 }
 
 .register-logos  {
-  margin-top: 10px;
   display: flex;
-  align-items: center;
+  margin:0px !important;
   justify-content: flex-start;
-  gap: 15px;
-  margin-bottom: 0px !important;
-  margin-left: 30px;
+ 
 }
 
-.teamplus-logo{
-  
-  height: 50% !important;
+.teamplus-logo {
+  height: 120px !important;
+  margin-left:20px;
+  margin-top:-50px !important;
+  width:325px !important;
+ 
 }
 
 .stafio-logo {
@@ -95,14 +95,14 @@ body {
 /* ===== RIGHT SIDE ===== */
 .register-form-wrapper {
   background: #ffffff;
-  padding: 50px;
+  padding:50px;
   border-radius: 0;
-  margin-left: 50px;
+
 }
 
 .register-form-wrapper h5 {
   color: #36baee;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
   padding-bottom: 15px;
 }
@@ -134,6 +134,11 @@ body {
   border-radius: 8px;
 }
 
+.form-check-input{
+  border:1px outset #197ae8ff;
+  
+}
+
 .register-btn:hover {
   background-color: #17a8d3;
 }
@@ -141,7 +146,7 @@ body {
 .login-link {
   color: #19BDE8;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600 !important;
 }
 
 .login-link:hover {
