--- a/src/Components/Admin-Section/AdminSidebar.css
+++ b/src/Components/Admin-Section/AdminSidebar.css
@@ -2,7 +2,7 @@
 
 /* Sidebar Container */
 .employee-sidebar {
-  width: 250px;
+  width: auto;
   background-color: #19BDE8;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
@@ -11,12 +11,21 @@
   padding: 20px 0;
   display: flex;
   flex-direction: column;
-  min-height: 110vh;
+   height: 100vh; 
   transform: translateX(-100%);
   opacity: 0;
   transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
   z-index: 1050;
   overflow-y: auto;
+
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE & Edge */
+}
+
+/* 🔴 Hide scrollbar for Chrome, Safari */
+.employee-sidebar::-webkit-scrollbar {
+  width: 0;
+  display: none;
 }
 
 .employee-sidebar.show {
@@ -27,7 +36,7 @@
 /* Header */
 .employee-sidebar-header {
   text-align: center;
-  margin-bottom: 20px !important;
+  margin-bottom: 30px !important;
   margin-top:0px ;
   
 }
