--- a/src/Components/Admin-Section/Approval/LeaveApproval.css
+++ b/src/Components/Admin-Section/Approval/LeaveApproval.css
@@ -7,7 +7,7 @@
 
 /* Make sure fixed image always stays visible and ignores padding */
 .rightside-logo {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   z-index: 0; /* Ensure it stays above all content */
@@ -416,4 +416,61 @@
 
 .filter-btn:hover {
   background: #3730a3;
+}
+
+
+.reason-modal,
+.success-modal {
+  background: #f3f8ff;
+  width: 450px;
+  height:420px;
+  padding: 30px;
+  border-radius: 12px;
+  
+ 
+}
+
+.reason-modal h3{
+  margin-top:50px;
+  font-weight:600;
+  text-align:center;
+}
+
+.reason-modal textarea {
+  width: 100%;
+  height: 120px;
+  margin: 15px 0;
+  padding: 10px;
+  resize: none;
+  background:transparent;
+}
+
+.reason-modal small{
+  width:100%;
+  text-align:left !important;
+  
+}
+
+.modal-actions{
+  justify-content:center;
+  margin-top:30px;
+}
+
+.close-btn {
+  color:#000;
+  float:right;
+  
+}
+
+.success-modal{
+  text-align:center;
+   width: 450px;
+  height:300px;
+}
+
+.tick-icon{
+  width:100px;
+  height:100px;
+  margin-left:30px;
+  margin-top:40px;
 }
