--- a/src/Components/Admin-Section/Dashboard/Dashboard.css
+++ b/src/Components/Admin-Section/Dashboard/Dashboard.css
@@ -61,3 +61,15 @@
   margin-left:-50px;
   margin-right:-20px;
 }
+
+.meeting-time {
+  background: #1976d2;
+  color: white;
+  border-radius: 50%;
+  width: 45px !important;
+  height: 45px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
