--- a/src/Components/Admin-Section/Organization/Employees.css
+++ b/src/Components/Admin-Section/Organization/Employees.css
@@ -82,7 +82,7 @@
 
 
 /* SEARCH */
-.search-input {
+.search-inputt {
   padding: 6px 14px;
   border: 1px solid #ccc;
   border-radius: 16px;
@@ -91,6 +91,8 @@
   outline: none;
   margin-Left:-20px;
   margin-top:10px;
+  margin-left:10px !important;
+  background: transparent;
 }
 
 /* RIGHT SIDE */
@@ -502,4 +504,39 @@
   border-color: #999;
   color: #333;
   background: #f5f5f5;
+}
+
+.highlight {
+  background-color: #fff3cd;
+  padding: 4px 6px;
+  border-radius: 4px;
+  font-weight: 600;
+}
+
+.right-butn-filterr {
+  color: #000;
+  font-size: 15px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  background: transparent;
+  border: 1px solid #cecece;
+  border-radius: 12px;
+  padding: 6px 12px;
+  margin-bottom:0px;
+}
+
+.filter-panel {
+  margin-top: 0px;
+  display: flex;
+  gap: 12px;
+}
+
+.filter-panel select {
+  padding: 6px 10px;
+  border-radius: 4px;
+  background: transparent;
+  border: 1px solid #cecece;
+  border-radius: 12px;
 }
