--- a/src/Components/Admin-Section/Reports-/AttendanceReport.css
+++ b/src/Components/Admin-Section/Reports-/AttendanceReport.css
@@ -47,10 +47,12 @@
   position: relative;
 }
 
-.att-report-search-box input {
-  padding: 10px 16px 10px 40px;
+
+input.search-input2{
+   padding: 8px 10px;
   border: 1px solid #c3c5c7;
-  border-radius: 16px;
+ 
+  border-radius: 10px;
   font-size: 14px;
   outline: none;
 background: transparent;
@@ -148,6 +150,7 @@ background: transparent;
   color: #64748b;
   font-size: 14px;
   background: #fff;
+  cursor:pointer;
 }
 
 .att-report-download-btn {
@@ -158,7 +161,7 @@ background: transparent;
   border: none;
   color: #fff;
   border-radius: 10px;
-  padding: 10px 20px;
+  padding: 9px 14px;
   cursor: pointer;
 }
 
