--- a/src/Components/Admin-Section/leave/MyRegularization.css
+++ b/src/Components/Admin-Section/leave/MyRegularization.css
@@ -44,7 +44,7 @@
   border-radius: 0 15px 15px 0;
 }
 
-.btn-filter {
+.right-butn-filters {
   color: #000;
   font-size: 15px;
   cursor: pointer;
@@ -172,16 +172,14 @@
 /* ====== Overlay ====== */
 .regularization-overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.35);
+  inset: 0;
+  background: rgba(0, 0, 0, 0.45);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 9999;
 }
+
 
 /* ====== Modal Box ====== */
 .regularization-modal {
