--- a/src/Components/Employee-Section/EmployeeSidebar.css
+++ b/src/Components/Employee-Section/EmployeeSidebar.css
@@ -1,5 +1,5 @@
 .employee-sidebar {
-  width: 250px;
+  width: 250px !important;
   background-color: #19BDE8;
   color: #fff;
   font-family: 'Montserrat', sans-serif; 
@@ -13,7 +13,8 @@
   opacity: 0;
   transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
   z-index: 1050;
-  overflow-y: auto;
+   overflow-x: hidden;
+  
 
 }
 
@@ -39,6 +40,7 @@
 
 /* Links */
 .sidebar-link {
+  
   display: flex;
   align-items: center;
   gap: 10px;
@@ -50,6 +52,7 @@
   transition: all 0.25s ease-in-out;
   font-weight:500;
   border-top: 1px solid #fff;  
+  overflow-x: hidden;
 }
 .sidebar-link.active {
   background-color: #ffffffff !important;
@@ -69,10 +72,7 @@
   padding-top:10px;
 }
 
-.sidebar-link:hover {
-  background-color: #19BDE8;
-  transform: translateX(5px);
-}
+
 .leave{
   margin-left:10px;
    text-decoration: none !important; 
