--- a/src/Components/Employee-Section/Settings-/Settings.css
+++ b/src/Components/Employee-Section/Settings-/Settings.css
@@ -16,16 +16,16 @@
 
 /* Header */
 .settings-header h1 {
-  font-size: 30px;
+  font-size: 32px;     /* font-size: 30px; */
   font-weight: 600;
-  color: #1f2937;
-  margin-bottom: 5px;
+  color: #000000;    /* color: #1f2937; */
+  margin-bottom: 12px;   /* margin-bottom: 5px; */
   margin-top:40px;
   margin-left:30px;
 }
 
 .settings-header p {
-  color: #3f4143ff;
+   color: rgb(45, 46, 48);/* color: #3f4143ff; */
   font-size: 15px;
   margin-bottom: 25px;
   margin-left:30px;
@@ -34,7 +34,7 @@
 /* Tabs */
 .settings-tabs {
   display: flex;
-  gap: 20px;
+  gap: 40px;        /* gap: 20px; */
   border-bottom: 1px solid #e5e7eb;
   margin-bottom: 20px;
 }
@@ -42,8 +42,8 @@
 .settings-tabs .tab-link {
   background: none;
   border: none;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 15px;   /* modified */
+  font-weight: 500 ;/* font-weight: 600; */
   color: #6b7280;
   padding: 10px 5px;
   cursor: pointer;
@@ -52,6 +52,8 @@
 
 .settings-tabs .tab-link.active {
   color: #19bde8;
+  font-weight: 700 ;    /* font-weight: 600 ; */
+  font-size: 15px;      /* new */
 }
 
 .settings-tabs .tab-link.active::after {
@@ -79,9 +81,9 @@
 }
 
 .settings-card h3 {
-  font-size: 18px;
+  font-size: 17px;    /* font-size: 18px; */
   margin-bottom: 20px;
-  font-weight: 600;
+  font-weight: 700;   /* font-weight: 500; */
   color: #111827;
   margin-top:30px;
 }
@@ -94,20 +96,27 @@
 }
 
 .form-group label {
-  font-weight: 600;
+  font-weight: 500;   /* font-weight: 600; */
   margin-bottom: 8px;
-  color: #374151;
+  color: #0f0f0f;   /* color: #374151; */
+  
 }
 
 .form-group input,
 .form-group select {
-  padding: 10px 12px;
-  border: 1px solid #d1d5db;
-  border-radius: 6px;
-  font-size: 14px;
+  padding: 9px 12px 10px 10px;   /* modified */
+  /* border: 1px solid #d1d5db; */
+  border-radius: 4px !important;
+  font-size: 15px;
   outline: none;
   background: #fff;
-  width:40%;
+  color: #6b7280;
+  height: 40px; /* new */
+  width: 35% !important;   /* new  width: 40%*/
+  /* new */
+  appearance: auto;
+  -webkit-appearance: auto;
+  -moz-appearance: auto;
 }
 
 .form-group input:focus,
@@ -116,19 +125,42 @@
   box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.2);
 }
 
+label.switch{
+  margin-top:10px !important;
+}
+
+/* NEW css part  for check box inside the input*/
+.theme-input-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 44px;
+  padding: 0 12px;
+  border: 1px solid #cbd5e1;
+  border-radius: 6px;
+  background-color:#f7f8f8;
+  width: 340px; /* adjust if needed */
+}
+
+.theme-text {
+  font-size: 15px;
+  color: #6b7280;
+  font-weight: 500;
+}
+
 /* Toggle Switch */
 .switch {
   position: relative;
   display: inline-block;
   width: 46px;
   height: 24px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 
 .switch input {
   opacity: 0;
   width: 0;
-  height: 0;
+  height: 0;  
 }
 
 .slider {
@@ -141,6 +173,7 @@
   background-color: #d1d5db;
   transition: 0.3s;
   border-radius: 34px;
+  
 }
 
 .slider:before {
@@ -171,10 +204,12 @@ input:checked + .slider:before {
   margin-left: 8px;
 }
 
-.form-row {
+.form-row label{
+  margin-bottom:10px !important;
   display: flex;
-  gap: 30px;          /* space between left and right columns */
+  gap: 100px !important;          /* space between left and right columns */
   flex-wrap: wrap;    /* wrap on small screens */
+  font-size: 17px !important;    /* modified */
 }
 
 .form-column {
@@ -186,9 +221,10 @@ input:checked + .slider:before {
 }
 
 .form-group input{
- width:90%;
- border-radius:10px;
+ width:95% !important;   /* modified */
+ border-radius:10px !important;  /* modified */
  background: #f2f2f2ff;
+ height: 45px;
 
 }
 
@@ -200,7 +236,7 @@ input:checked + .slider:before {
 }
 
 [data-theme="dark"] {
-  --bg-color: #121212;
+  --bg-color: #c7c7c7; 
   --text-color: #ffffff;
 }
 
@@ -208,4 +244,96 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   transition: all 0.3s ease;
+}
+
+/* picture add heading*/
+
+.form-group3 p{
+  font-size: 15px;
+  color: gray;
+  margin-top: -8px;
+}
+
+.form-group3 h3{
+  font-size: 19px;
+  font-weight: 600;
+  color: #333333;
+}
+
+.form-group3 {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* picture add */
+ /* new */
+.profile-upload1 {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  /* margin-top: 10px;  modified */
+}
+
+.profile-preview1 {
+  width: 70px;    /* modified  */
+  height: 70px;   /* modified  */
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.upload-btn1 {
+  padding: 6px 14px;
+  border: 1px solid #ddd;
+  background: white;
+  border-radius: 14px;   /* modified */
+  cursor: pointer;
+  color: #7c7c7cff;
+  font-size: 16px;
+}
+
+.file-info1 {
+  font-size: 0.9em;
+  color: #666;
+  margin-top: 5px;
+}
+
+.form-actions1 {
+  margin-top: 30px;
+  display: flex;
+  gap: 10px;
+}
+
+.btn-cancel, .btn-save {
+  padding: 1px 2px !important;
+  border: none;
+  border-radius: none ; /* border-radius: 8px; */
+  cursor: pointer;
+  height: 40px !important;
+  
+}
+
+.btn-cancel {
+  background: #19bde8;
+  color: #ffffffff;
+  /* font-weight:500;   modified */
+  font-size:15px;    /* modified */
+  border-radius: none;
+}
+
+.btn-save {
+  background: #19bde8;
+  color:  #ffffffff;
+  /* border-radius: 8px !important; */  /* modified */  
+  font-weight:500 !important; /* modified */  
+  font-size:15px !important;   /* modified */
+  border-radius: none !important;
+
+}
+
+.error-text {           /* new */
+  color: #dc2626;
+  font-size: 14px;
+  margin-top: 2px;        /* modified */
+  margin-left: 5px;         /* modified */
 }
