--- a/src/Components/Employee-Section/Topbar.css
+++ b/src/Components/Employee-Section/Topbar.css
@@ -127,3 +127,18 @@
   from { opacity: 0; transform: translateY(-5px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+.announcement-popup1{
+  position: absolute;
+  top: 52px;
+  right: -56px;
+  width: 600px;
+  max-height: 80vh;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  overflow-y: auto;
+  z-index: 2000;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+  animation: slideDown 0.3s ease;
+}
